[alert] add alert on copied result data

--- a/index.html
+++ b/index.html
@@ -332,6 +332,7 @@
 
             // Copy the text inside the text field
             navigator.clipboard.writeText(copyText.value);
+            alert('COPIED! Data hasil check folbek sudah di-copy ke clipboard. Silakan paste di media yang kamu inginkan');
         }
     </script>
 </body>
