[deploy] test GA

--- a/index.html
+++ b/index.html
@@ -96,14 +96,29 @@
             .section-items {
                 border: none;
             }
+
             .section-tools.tone-2 .section-items {
                 background-color: #cecece;
             }
         }
     </style>
+    <!-- Google Tag Manager -->
+    <script>(function (w, d, s, l, i) {
+            w[l] = w[l] || []; w[l].push({
+                'gtm.start':
+                    new Date().getTime(), event: 'gtm.js'
+            }); var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-545J22TF');</script>
+    <!-- End Google Tag Manager -->
 </head>
 
 <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-545J22TF" height="0" width="0"
+            style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <div style="padding: 25px; display: block;">
         <h1 style="margin-bottom: 25px;">Tools Followers Checking</h1>
 
@@ -327,7 +342,8 @@
                         style=" color:#c9c8cd; font-family:Arial,sans-serif; font-size:14px; line-height:17px; margin-bottom:0; margin-top:8px; overflow:hidden; padding:8px 0 7px; text-align:center; text-overflow:ellipsis; white-space:nowrap;">
                         <a href="https://www.instagram.com/reel/C6vaS4Ey2H7/?utm_source=ig_embed&amp;utm_campaign=loading"
                             style=" color:#c9c8cd; font-family:Arial,sans-serif; font-size:14px; font-style:normal; font-weight:normal; line-height:17px; text-decoration:none;"
-                            target="_blank">A post shared by Maysiella Sabrina (@siella_)</a></p>
+                            target="_blank">A post shared by Maysiella Sabrina (@siella_)</a>
+                    </p>
                 </div>
             </blockquote>
             <script async src="//www.instagram.com/embed.js"></script>
@@ -420,7 +436,8 @@
                         style=" color:#c9c8cd; font-family:Arial,sans-serif; font-size:14px; line-height:17px; margin-bottom:0; margin-top:8px; overflow:hidden; padding:8px 0 7px; text-align:center; text-overflow:ellipsis; white-space:nowrap;">
                         <a href="https://www.instagram.com/reel/C5DE6b7SGth/?utm_source=ig_embed&amp;utm_campaign=loading"
                             style=" color:#c9c8cd; font-family:Arial,sans-serif; font-size:14px; font-style:normal; font-weight:normal; line-height:17px; text-decoration:none;"
-                            target="_blank">A post shared by Maysiella Sabrina (@siella_)</a></p>
+                            target="_blank">A post shared by Maysiella Sabrina (@siella_)</a>
+                    </p>
                 </div>
             </blockquote>
             <script async src="//www.instagram.com/embed.js"></script>
@@ -513,7 +530,8 @@
                         style=" color:#c9c8cd; font-family:Arial,sans-serif; font-size:14px; line-height:17px; margin-bottom:0; margin-top:8px; overflow:hidden; padding:8px 0 7px; text-align:center; text-overflow:ellipsis; white-space:nowrap;">
                         <a href="https://www.instagram.com/reel/C40KpLYSRML/?utm_source=ig_embed&amp;utm_campaign=loading"
                             style=" color:#c9c8cd; font-family:Arial,sans-serif; font-size:14px; font-style:normal; font-weight:normal; line-height:17px; text-decoration:none;"
-                            target="_blank">A post shared by Maysiella Sabrina (@siella_)</a></p>
+                            target="_blank">A post shared by Maysiella Sabrina (@siella_)</a>
+                    </p>
                 </div>
             </blockquote>
             <script async src="//www.instagram.com/embed.js"></script>
@@ -606,7 +624,8 @@
                         style=" color:#c9c8cd; font-family:Arial,sans-serif; font-size:14px; line-height:17px; margin-bottom:0; margin-top:8px; overflow:hidden; padding:8px 0 7px; text-align:center; text-overflow:ellipsis; white-space:nowrap;">
                         <a href="https://www.instagram.com/reel/C4psXFWSpvW/?utm_source=ig_embed&amp;utm_campaign=loading"
                             style=" color:#c9c8cd; font-family:Arial,sans-serif; font-size:14px; font-style:normal; font-weight:normal; line-height:17px; text-decoration:none;"
-                            target="_blank">A post shared by Maysiella Sabrina (@siella_)</a></p>
+                            target="_blank">A post shared by Maysiella Sabrina (@siella_)</a>
+                    </p>
                 </div>
             </blockquote>
             <script async src="//www.instagram.com/embed.js"></script>
@@ -615,7 +634,7 @@
 
     <div
         style="padding: 15px; display: flex; align-items: center; justify-content: center; background-color: #000; color: #FFF;">
-        © 2024 | contributed by @siella_
+        © 2024 | Follow IG: @siella_
     </div>
 
     <script type="text/javascript">
