--- a/index.html
+++ b/index.html
@@ -636,6 +636,43 @@
         var flwing = [];
         var flwer = [];
 
+        // old download file
+        // const checkFollowing = () => {
+        //     let files = document.querySelector("#inputFollowing").files;
+        //     document.querySelector("#textareaFollowing").value = "";
+
+        //     if (files.length === 0) return;
+
+        //     const file = files[0];
+
+        //     let reader = new FileReader();
+
+        //     reader.onload = (e) => {
+        //         const file = e.target.result;
+
+        //         splitText = file.split('https://www.instagram.com/');
+
+        //         console.log('file.length: ', splitText.length);
+        //         document.getElementById("countFollowing").textContent = splitText.length - 1;
+
+        //         for (i = 1; i < splitText.length; i++) {
+        //             currVal = document.querySelector("#textareaFollowing").value;
+        //             var getUsername = splitText[i].substring(0, splitText[i].indexOf('"'));
+        //             flwing.push(getUsername);
+
+        //             if (currVal !== "") {
+        //                 document.querySelector("#textareaFollowing").value = currVal + "\n" + getUsername
+        //             } else {
+        //                 document.querySelector("#textareaFollowing").value = getUsername
+        //             }
+
+        //         }
+        //     };
+
+        //     reader.onerror = (e) => alert(e.target.error.name);
+        //     reader.readAsText(file);
+        // }
+
         const checkFollowing = () => {
             let files = document.querySelector("#inputFollowing").files;
             document.querySelector("#textareaFollowing").value = "";
@@ -643,35 +680,31 @@
             if (files.length === 0) return;
 
             const file = files[0];
-
             let reader = new FileReader();
 
             reader.onload = (e) => {
-                const file = e.target.result;
+                const html = e.target.result;
 
-                splitText = file.split('https://www.instagram.com/');
+                // bikin DOM parser biar gampang ambil element
+                let parser = new DOMParser();
+                let doc = parser.parseFromString(html, "text/html");
 
-                console.log('file.length: ', splitText.length);
-                document.getElementById("countFollowing").textContent = splitText.length - 1;
+                // ambil semua h2 yang berisi username
+                let usernames = Array.from(doc.querySelectorAll("h2")).map(el => el.textContent.trim());
 
-                for (i = 1; i < splitText.length; i++) {
-                    currVal = document.querySelector("#textareaFollowing").value;
-                    var getUsername = splitText[i].substring(0, splitText[i].indexOf('"'));
-                    flwing.push(getUsername);
+                // tampilkan count
+                document.getElementById("countFollowing").textContent = usernames.length;
 
-                    // console.log('test3: ', getUsername);
-                    if (currVal !== "") {
-                        document.querySelector("#textareaFollowing").value = currVal + "\n" + getUsername
-                    } else {
-                        document.querySelector("#textareaFollowing").value = getUsername
-                    }
+                // simpan ke flwing
+                flwing.push(...usernames);
 
-                }
+                // tampilkan di textarea
+                document.querySelector("#textareaFollowing").value = usernames.join("\n");
             };
 
             reader.onerror = (e) => alert(e.target.error.name);
             reader.readAsText(file);
-        }
+        };
 
         const checkFollower = () => {
             let files = document.querySelector("#inputFollower").files;
